# sdl2-vapi

./: .gitignore  INSTALL  README  README.md  WhatsNew  how_install_sdl2_Graphics  how_install_sdl2_Graphics.md  meson.build  meson_options.txt  sdl2-android.vapi  sdl2-gfx.vapi  sdl2-image.vapi  sdl2-ios.vapi  sdl2-mixer.vapi  sdl2-net.vapi  sdl2-ttf.vapi  sdl2-windows.vapi  sdl2-winrt.vapi  sdl2.vapi  sdl2.vapi~  whatsnew.txt
docs/: meson.build
examples/: .gitignore  Example_1  Example_1.vala  README.md  basics  basics.vala  legacy-example.vala  meson.build  multiple_subsystems.vala
examples/Example 2- Genie/: Example_1.gs  makefile
examples/Example1- Vala/: Example_1  Example_1.vala
examples/basics/: basics.vala  meson.build
examples/subsystems/: config.vala.in  meson.build  multiple_subsystems.vala
vapis/: SDL2_mixer.vapi  SDL2_net.vapi  sdl2-android.vapi  sdl2-ios.vapi  sdl2-windows.vapi  sdl2-winrt.vapi  sdl2.vapi
