custom_target('docs',
  input: '',
  output: 'docs',
  command: [ valadoc,
    '--doclet=html',
    '--force',
    '--package-name=@0@'.format(meson.project_name()),
    '--package-version=@0@'.format(meson.project_version()),
    '--pkg=glib-2.0',
    '--pkg=gio-2.0',
    '--pkg=sdl2',
    '--pkg=SDL2_gfx',
    '--pkg=SDL2_ttf',
    '--pkg=SDL2_image',
    '--pkg=SDL2_mixer',
    '--pkg=SDL2_net',
    '--pkg=sdl2-android',
    '--pkg=sdl2-ios',
    '--pkg=sdl2-windows',
    '--enable-experimental-non-null',
    '--vapidir=@0@'.format(vapi_dir),
    '--directory=@OUTDIR@'
  ],
  build_by_default: true,
)

